--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,16 @@
         <!-- Bootstrap -->
         <style>
             @import "{{ url_for('static', filename='css/bootstrap.min.css') }}";
+            @import "{{ url_for('static', filename='css/bootstrap-slider.min.css') }}";
+
+            #colorww1Slider .slider-selection,
+            #colorww2Slider .slider-selection {
+                background: #BABABA;
+            }
+            #colorww1Slider,
+            #colorww2Slider {
+                width: 100%;
+            }
         </style>
 
         <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -21,49 +31,71 @@
     </head>
     <body>
         <div class="container">
-            <h1>CYBER!</h1>
+            <h1>Cyber-Steuerung v0.1.0</h1>
 
             <div class="row">
                 <div class="col-lg-6">
                     <form class="form-horizontal">
                         <fieldset>
-                            <legend>Anzeige 1</legend>
+                            <legend>Anzeige links</legend>
 
                             <div class="form-group">
-                                <label class="col-md-4 control-label" for="selectbasic">Select Basic</label>
+                                <label class="col-md-4 control-label" for="line1">Linie</label>
                                 <div class="col-md-6">
-                                    <select id="selectbasic" name="selectbasic" class="form-control">
-                                        <option value="1">Option one</option>
-                                        <option value="2">Option two</option>
-                                    </select><!-- #selectbasic /.form-control -->
+                                    <select id="line1" name="line1" class="form-control">
+                                        <option value="1">S7</option>
+                                    </select><!-- #line1 /.form-control -->
                                 </div><!-- /.col-md-4 -->
+                                <div class="col-md-2">
+                                    <button id="line1rand" name="line1rand" class="btn btn-default">Zufällig</button>
+                                </div><!-- /.col-md-2 -->
                             </div><!-- /.form-group -->
 
                             <div class="form-group">
-                                <label class="col-md-4 control-label" for="selectbasic">Select Basic</label>
+                                <label class="col-md-4 control-label" for="target1">Ziel</label>
                                 <div class="col-md-6">
-                                    <select id="selectbasic" name="selectbasic" class="form-control">
-                                        <option value="1">Option one</option>
-                                        <option value="2">Option two</option>
+                                    <select id="target1" name="target1" class="form-control">
+                                        <option value="1">Potsdam Hbf</option>
                                     </select><!-- #selectbasic /.form-control -->
                                 </div><!-- /.col-md-4 -->
+                                <div class="col-md-2">
+                                    <button id="target1rand" name="target1rand" class="btn btn-default">Zufällig</button>
+                                </div><!-- /.col-md-2 -->
                             </div><!-- /.form-group -->
 
                             <div class="form-group">
-                                <label class="col-md-4 control-label" for="selectbasic">Select Basic</label>
+                                <label class="col-md-4 control-label" for="desc1">Beschreibung</label>
                                 <div class="col-md-6">
-                                    <select id="selectbasic" name="selectbasic" class="form-control">
-                                        <option value="1">Option one</option>
-                                        <option value="2">Option two</option>
+                                    <select id="desc1" name="desc1" class="form-control">
+                                        <option value="1">über Zoologischer Garten, Westkreuz</option>
                                     </select><!-- #selectbasic /.form-control -->
                                 </div><!-- /.col-md-4 -->
+                                <div class="col-md-2">
+                                    <button id="desc1rand" name="desc1rand" class="btn btn-default">Zufällig</button>
+                                </div><!-- /.col-md-2 -->
                             </div><!-- /.form-group -->
 
                             <div class="form-group">
-                                <label class="col-md-4 control-label" for="button1id">Double Button</label>
+                                <label class="col-md-4 control-label" for="colorrgb1">Beleuchtung</label>
+                                <div class="col-md-3">
+                                    <input type="color" id="colorrgb1" class="form-control" value="#88cde8" />
+                                </div>
+                                <div class="col-md-3">
+                                    <input id="colorww1" data-slider-id='colorww1Slider' type="text" data-slider-min="0" data-slider-max="100" data-slider-step="1" data-slider-value="50" />
+                                </div>
+                                <div class="col-md-3 col-md-offset-4">
+                                    <p><small>RGB</small></p>
+                                </div>
+                                <div class="col-md-3">
+                                    <p><small>WW</small></p>
+                                </div>
+                            </div>
+
+                            <div class="form-group">
+                                <label class="col-md-4 control-label" for="sign1actions"></label>
                                 <div class="col-md-8">
-                                    <button id="button1id" name="button1id" class="btn btn-success">Good Button</button>
-                                    <button id="button2id" name="button2id" class="btn btn-danger">Scary Button</button>
+                                    <button id="sign1go" name="sign1actions" class="btn btn-primary">Anwenden</button>
+                                    <button id="sign1reset" name="sign1actions" class="btn btn-danger">Reset</button>
                                 </div><!-- /.col-md-4 -->
                             </div><!-- /.form-group -->
                         </fieldset>
@@ -72,49 +104,65 @@
                 <div class="col-lg-6">
                     <form class="form-horizontal">
                         <fieldset>
-                            <legend>Anzeige 2</legend>
+                            <legend>Anzeige rechts</legend>
 
                             <div class="form-group">
-                                <label class="col-md-4 control-label" for="line2">Line</label>
+                                <label class="col-md-4 control-label" for="line2">Linie</label>
                                 <div class="col-md-6">
                                     <select id="line2" name="line2" class="form-control">
-                                        <option value="1">Option one</option>
-                                    </select><!-- #selectbasic /.form-control -->
+                                        <option value="1">S7</option>
+                                    </select><!-- #line2 /.form-control -->
                                 </div><!-- /.col-md-4 -->
                                 <div class="col-md-2">
-                                    <button id="line2rand" name="line2rand" class="btn btn-default">Random</button>
+                                    <button id="line2rand" name="line2rand" class="btn btn-default">Zufällig</button>
                                 </div><!-- /.col-md-2 -->
                             </div><!-- /.form-group -->
 
                             <div class="form-group">
-                                <label class="col-md-4 control-label" for="target2">Target</label>
+                                <label class="col-md-4 control-label" for="target2">Ziel</label>
                                 <div class="col-md-6">
                                     <select id="target2" name="target2" class="form-control">
-                                        <option value="1">Option one</option>
+                                        <option value="1">Potsdam Hbf</option>
                                     </select><!-- #selectbasic /.form-control -->
                                 </div><!-- /.col-md-4 -->
                                 <div class="col-md-2">
-                                    <button id="target2rand" name="target2rand" class="btn btn-default">Random</button>
+                                    <button id="target2rand" name="target2rand" class="btn btn-default">Zufällig</button>
                                 </div><!-- /.col-md-2 -->
                             </div><!-- /.form-group -->
 
                             <div class="form-group">
-                                <label class="col-md-4 control-label" for="desc2">Description</label>
+                                <label class="col-md-4 control-label" for="desc2">Beschreibung</label>
                                 <div class="col-md-6">
                                     <select id="desc2" name="desc2" class="form-control">
-                                        <option value="1">Option one</option>
+                                        <option value="1">über Zoologischer Garten, Westkreuz</option>
                                     </select><!-- #selectbasic /.form-control -->
                                 </div><!-- /.col-md-4 -->
                                 <div class="col-md-2">
-                                    <button id="desc2rand" name="desc2rand" class="btn btn-default">Random</button>
+                                    <button id="desc2rand" name="desc2rand" class="btn btn-default">Zufällig</button>
                                 </div><!-- /.col-md-2 -->
                             </div><!-- /.form-group -->
 
                             <div class="form-group">
-                                <label class="col-md-4 control-label" for="button1id">Double Button</label>
+                                <label class="col-md-4 control-label" for="colorrgb2">Beleuchtung</label>
+                                <div class="col-md-3">
+                                    <input type="color" id="colorrgb2" class="form-control" value="#88cde8" />
+                                </div>
+                                <div class="col-md-3">
+                                    <input id="colorww2" data-slider-id='colorww2Slider' type="text" data-slider-min="0" data-slider-max="100" data-slider-step="1" data-slider-value="50" />
+                                </div>
+                                <div class="col-md-3 col-md-offset-4">
+                                    <p><small>RGB</small></p>
+                                </div>
+                                <div class="col-md-3">
+                                    <p><small>WW</small></p>
+                                </div>
+                            </div>
+
+                            <div class="form-group">
+                                <label class="col-md-4 control-label" for="sign2actions"></label>
                                 <div class="col-md-8">
-                                    <button id="button1id" name="button1id" class="btn btn-primary">Go!</button>
-                                    <button id="button2id" name="button2id" class="btn btn-danger">Reset</button>
+                                    <button id="sign2go" name="sign2actions" class="btn btn-primary">Anwenden</button>
+                                    <button id="sign2reset" name="sign2actions" class="btn btn-danger">Reset</button>
                                 </div><!-- /.col-md-4 -->
                             </div><!-- /.form-group -->
                         </fieldset>
@@ -125,28 +173,29 @@
                 <div class="col-lg-12">
                     <form class="form-horizontal">
                         <fieldset>
-                            <legend>Maintenance</legend>
+                            <legend>Wartung<span class="pull-right"><a id="maintenancetoggle" href="#"><span id="ico" class="glyphicon glyphicon-chevron-up" aria-hidden="true"></span></span></a></legend>
 
-                            <div class="form-group">
+                            <div id="maintenance" class="form-group">
                                 <label class="col-md-4 control-label" for="homeall">Homing</label>
                                 <div class="col-md-4">
                                     <select id="homesingleselect" name="homesingleselect" class="form-control">
-                                        <option value="1">Option one</option>
+                                        <option value="1">Anzeige 1, Linie</option>
                                     </select><!-- #selectbasic /.form-control -->
                                 </div><!-- /.col-md-4 -->
                                 <div class="col-md-2">
-                                    <button id="homesinglebutton" name="homesinglebutton" class="btn btn-default">Home</button>
-                                    <button id="homeall" name="homeall" class="btn btn-primary">Home all</button>
+                                    <button id="homeone" name="homeone" class="btn btn-default">Home</button>
+                                    <button id="homeall" name="homeall" class="btn btn-primary">Home alle</button>
                                 </div><!-- /.col-md-4 -->
                             </div><!-- /.form-group -->
                         </fieldset>
                     </form><!-- /.form-horizontal -->
                 </div><!-- /.col-lg-12 -->
             </div><!-- /.row -->
-            <div class="row">
+            <div id="console" class="row">
                 <h2>Console:</h2>
                 <pre id="log">
-                    <p>1970-01-01 00:00:00 - Test1</p><p>1970-01-01 00:00:00 - Test2</p>
+                    <p>1970-01-01 00:00:00 - Test1</p>
+                    <p>1970-01-01 00:00:00 - Test2</p>
                 </pre>
             </div>
         </div><!-- /.container -->
@@ -156,10 +205,26 @@
     <script src="{{ url_for('static', filename='js/socket.io-1.4.3.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/select2.full.min.js') }}"></script>
-    <script type="text/javascript" charset="utf-8">
+    <script src="{{ url_for('static', filename='js/bootstrap-slider.min.js') }}"></script>
+    <script>
         $(document).ready(function(){
+            $('#colorww1').slider({
+                formatter: function(value) {
+                    return value + '%';
+                }
+            });
+
+            $('#colorww2').slider({
+                formatter: function(value) {
+                    return value + '%';
+                }
+            });
+
+            $("#line1").select2();
             $("#line2").select2();
+            $("#target1").select2();
             $("#target2").select2();
+            $("#desc1").select2();
             $("#desc2").select2();
 
             var namespace = '/cyber';  // change to an empty string to use the global namespace
@@ -172,13 +237,15 @@
                 socket = io.connect('http://' + document.domain + ':' + location.port + namespace);
                 // event handler for server sent data
                 // the data is displayed in the "Received" section of the page
-                socket.on('my response', function(msg) {
+                socket.on('response', function(msg) {
+                    console.log(msg.data)
                     $('#log').append('<br>' + $('<div/>').text('Received #' + msg.count + ': ' + msg.data).html());
                 });
 
                 // event handler for new connections
                 socket.on('connect', function() {
-                    socket.emit('my event', {data: 'I\'m connected!'});
+                    console.log('>>> new connection')
+                    socket.emit('connect', {data: 'I\'m connected!'});
                 });
             }
 
@@ -189,21 +256,36 @@
             // handlers for the different forms in the page
             // these send data to the server in a variety of ways
             $('form#broadcast').submit(function(event) {
-                socket.emit('my broadcast event', {data: $('#broadcast_data').val()});
+                socket.emit('broadcast', {data: $('#broadcast_data').val()});
                 return false;
             });
             $('form#home').submit(function(event) {
-                socket.emit('home event', {data: {leave_id: $('#leave_id').val()}});
+                socket.emit('home', {data: {leave_id: $('#leave_id').val()}});
                 return false;
             });
             $('form#disconnect').submit(function(event) {
-                socket.emit('disconnect request');
+                socket.emit('disconnect');
                 return false;
             });
             $('form#connect').submit(function(event) {
                 connect();
                 return false;
             });
+        });
+
+        $("#maintenancetoggle").click(function() {
+            $("#maintenance").slideToggle("slow", function() {
+                if($("#ico").hasClass("glyphicon-chevron-up")) {
+                    $("#ico").removeClass("glyphicon-chevron-up");
+                    $("#ico").addClass("glyphicon-chevron-down");
+                    console.log("down")
+                } else {
+                    $("#ico").removeClass("glyphicon-chevron-down");
+                    $("#ico").addClass("glyphicon-chevron-up");
+                    console.log("up")
+                }
+            });
+            $("#console").slideToggle("slow");
         });
     </script>
 </body>
