things start to work!

--- a/templates/index.html
+++ b/templates/index.html
@@ -42,48 +42,45 @@
                             <legend>Anzeige links</legend>
 
                             <div class="form-group">
-                                <label class="col-md-4 control-label" for="line1">Linie</label>
+                                <label class="col-md-4 control-label" for="lineLeft">Linie</label>
                                 <div class="col-md-6">
-                                    <select id="line1" name="line1" class="form-control">
-                                        <option value="1">S7</option>
+                                    <select id="lineLeft" name="lineLeft" class="form-control">
                                     </select><!-- #line1 /.form-control -->
                                 </div><!-- /.col-md-4 -->
                                 <div class="col-md-2">
-                                    <button id="line1rand" name="line1rand" class="btn btn-default">Zufällig</button>
+                                    <button id="lineLeftRand" name="lineLeftRand" class="btn btn-default">Zufällig</button>
                                 </div><!-- /.col-md-2 -->
                             </div><!-- /.form-group -->
 
                             <div class="form-group">
-                                <label class="col-md-4 control-label" for="target1">Ziel</label>
+                                <label class="col-md-4 control-label" for="destLeft">Ziel</label>
                                 <div class="col-md-6">
-                                    <select id="target1" name="target1" class="form-control">
-                                        <option value="1">Potsdam Hbf</option>
+                                    <select id="destLeft" name="destLeft" class="form-control">
                                     </select><!-- #selectbasic /.form-control -->
                                 </div><!-- /.col-md-4 -->
                                 <div class="col-md-2">
-                                    <button id="target1rand" name="target1rand" class="btn btn-default">Zufällig</button>
+                                    <button id="destLeftRand" name="destLeftRand" class="btn btn-default">Zufällig</button>
                                 </div><!-- /.col-md-2 -->
                             </div><!-- /.form-group -->
 
                             <div class="form-group">
-                                <label class="col-md-4 control-label" for="desc1">Beschreibung</label>
+                                <label class="col-md-4 control-label" for="descLeft">Beschreibung</label>
                                 <div class="col-md-6">
-                                    <select id="desc1" name="desc1" class="form-control">
-                                        <option value="1">über Zoologischer Garten, Westkreuz</option>
+                                    <select id="descLeft" name="descLeft" class="form-control">
                                     </select><!-- #selectbasic /.form-control -->
                                 </div><!-- /.col-md-4 -->
                                 <div class="col-md-2">
-                                    <button id="desc1rand" name="desc1rand" class="btn btn-default">Zufällig</button>
+                                    <button id="descLeftRand" name="descLeftRand" class="btn btn-default">Zufällig</button>
                                 </div><!-- /.col-md-2 -->
                             </div><!-- /.form-group -->
 
                             <div class="form-group">
-                                <label class="col-md-4 control-label" for="colorrgb1">Beleuchtung</label>
+                                <label class="col-md-4 control-label" for="colorRGBLeft">Beleuchtung</label>
                                 <div class="col-md-3">
-                                    <input type="color" id="colorrgb1" class="form-control" value="#88cde8" />
+                                    <input type="color" id="colorRGBLeft" class="form-control" value="#88cde8" />
                                 </div>
                                 <div class="col-md-3">
-                                    <input id="colorww1" data-slider-id='colorww1Slider' type="text" data-slider-min="0" data-slider-max="100" data-slider-step="1" data-slider-value="50" />
+                                    <input id="colorWWLeft" data-slider-id='colorWWLeftSlider' type="text" data-slider-min="0" data-slider-max="100" data-slider-step="1" data-slider-value="50" />
                                 </div>
                                 <div class="col-md-3 col-md-offset-4">
                                     <p><small>RGB</small></p>
@@ -94,10 +91,10 @@
                             </div>
 
                             <div class="form-group">
-                                <label class="col-md-4 control-label" for="sign1actions"></label>
+                                <label class="col-md-4 control-label" for="signLeftActions"></label>
                                 <div class="col-md-8">
-                                    <button id="sign1go" name="sign1actions" class="btn btn-primary">Anwenden</button>
-                                    <button id="sign1reset" name="sign1actions" class="btn btn-danger">Reset</button>
+                                    <button id="signLeftGo" name="signLeftActions" class="btn btn-primary">Anwenden</button>
+                                    <button id="signLeftReset" name="signLeftActions" class="btn btn-danger">Reset</button>
                                 </div><!-- /.col-md-4 -->
                             </div><!-- /.form-group -->
                         </fieldset>
@@ -109,48 +106,45 @@
                             <legend>Anzeige rechts</legend>
 
                             <div class="form-group">
-                                <label class="col-md-4 control-label" for="line2">Linie</label>
+                                <label class="col-md-4 control-label" for="lineRight">Linie</label>
                                 <div class="col-md-6">
-                                    <select id="line2" name="line2" class="form-control">
-                                        <option value="1">S7</option>
+                                    <select id="lineRight" name="lineRight" class="form-control">
                                     </select><!-- #line2 /.form-control -->
                                 </div><!-- /.col-md-4 -->
                                 <div class="col-md-2">
-                                    <button id="line2rand" name="line2rand" class="btn btn-default">Zufällig</button>
+                                    <button id="lineRightRand" name="lineRightRand" class="btn btn-default">Zufällig</button>
                                 </div><!-- /.col-md-2 -->
                             </div><!-- /.form-group -->
 
                             <div class="form-group">
-                                <label class="col-md-4 control-label" for="target2">Ziel</label>
+                                <label class="col-md-4 control-label" for="destRight">Ziel</label>
                                 <div class="col-md-6">
-                                    <select id="target2" name="target2" class="form-control">
-                                        <option value="1">Potsdam Hbf</option>
+                                    <select id="destRight" name="destRight" class="form-control">
                                     </select><!-- #selectbasic /.form-control -->
                                 </div><!-- /.col-md-4 -->
                                 <div class="col-md-2">
-                                    <button id="target2rand" name="target2rand" class="btn btn-default">Zufällig</button>
+                                    <button id="destRightRand" name="destRightRand" class="btn btn-default">Zufällig</button>
                                 </div><!-- /.col-md-2 -->
                             </div><!-- /.form-group -->
 
                             <div class="form-group">
-                                <label class="col-md-4 control-label" for="desc2">Beschreibung</label>
+                                <label class="col-md-4 control-label" for="descRight">Beschreibung</label>
                                 <div class="col-md-6">
-                                    <select id="desc2" name="desc2" class="form-control">
-                                        <option value="1">über Zoologischer Garten, Westkreuz</option>
+                                    <select id="descRight" name="descRight" class="form-control">
                                     </select><!-- #selectbasic /.form-control -->
                                 </div><!-- /.col-md-4 -->
                                 <div class="col-md-2">
-                                    <button id="desc2rand" name="desc2rand" class="btn btn-default">Zufällig</button>
+                                    <button id="descRightRand" name="descRightRand" class="btn btn-default">Zufällig</button>
                                 </div><!-- /.col-md-2 -->
                             </div><!-- /.form-group -->
 
                             <div class="form-group">
-                                <label class="col-md-4 control-label" for="colorrgb2">Beleuchtung</label>
+                                <label class="col-md-4 control-label" for="colorRGBRight">Beleuchtung</label>
                                 <div class="col-md-3">
-                                    <input type="color" id="colorrgb2" class="form-control" value="#88cde8" />
+                                    <input type="color" id="colorRGBRight" class="form-control" value="#88cde8" />
                                 </div>
                                 <div class="col-md-3">
-                                    <input id="colorww2" data-slider-id='colorww2Slider' type="text" data-slider-min="0" data-slider-max="100" data-slider-step="1" data-slider-value="50" />
+                                    <input id="colorWWRight" data-slider-id='colorWWRightSlider' type="text" data-slider-min="0" data-slider-max="100" data-slider-step="1" data-slider-value="50" />
                                 </div>
                                 <div class="col-md-3 col-md-offset-4">
                                     <p><small>RGB</small></p>
@@ -161,10 +155,10 @@
                             </div>
 
                             <div class="form-group">
-                                <label class="col-md-4 control-label" for="sign2actions"></label>
+                                <label class="col-md-4 control-label" for="signRightActions"></label>
                                 <div class="col-md-8">
-                                    <button id="sign2go" name="sign2actions" class="btn btn-primary">Anwenden</button>
-                                    <button id="sign2reset" name="sign2actions" class="btn btn-danger">Reset</button>
+                                    <button id="signRightGo" name="signRightActions" class="btn btn-primary">Anwenden</button>
+                                    <button id="signRightReset" name="signRightActions" class="btn btn-danger">Reset</button>
                                 </div><!-- /.col-md-4 -->
                             </div><!-- /.form-group -->
                         </fieldset>
@@ -178,15 +172,20 @@
                             <legend>Wartung</legend>
 
                             <div id="maintenance" class="form-group">
-                                <label class="col-md-4 control-label" for="homeall">Homing</label>
+                                <label class="col-md-4 control-label" for="homeAll">Homing</label>
                                 <div class="col-md-4">
-                                    <select id="homesingleselect" name="homesingleselect" class="form-control">
-                                        <option value="1">Anzeige 1, Linie</option>
+                                    <select id="homeSingleSelect" name="homeSingleSelect" class="form-control">
+                                        <option value="lineleft">Linie (links)</option>
+                                        <option value="lineright">Linie (rechts)</option>
+                                        <option value="destleft">Ziel (links)</option>
+                                        <option value="destright">Ziel (rechts)</option>
+                                        <option value="descleft">Beschreibung (links)</option>
+                                        <option value="descright">Beschreibung (rechts)</option>
                                     </select><!-- #selectbasic /.form-control -->
                                 </div><!-- /.col-md-4 -->
                                 <div class="col-md-2">
-                                    <button id="homeone" name="homeone" type="submit" class="btn btn-default">Home</button>
-                                    <button id="homeall" name="homeall" type="button" class="btn btn-primary">Home alle</button>
+                                    <button id="homeOne" name="homeOne" type="submit" class="btn btn-default">Home</button>
+                                    <button id="homeAll" name="homeAll" type="button" class="btn btn-primary">Home alle</button>
                                 </div><!-- /.col-md-4 -->
                             </div><!-- /.form-group -->
                         </fieldset>
@@ -201,101 +200,46 @@
     <script src="{{ url_for('static', filename='js/bootstrap-slider.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/socket.io-1.4.6.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/selectize.min.js') }}"></script>
-
+    <script src="{{ url_for('static', filename='js/cugcontrol.js') }}"></script>
     <script>
-        Object.prototype.in = function() {
-            for(var i = 0; i < arguments.length; i++) {
-                if(arguments[i] == this) {
-                    return true;
-                }
-            }
-            return false;
-        };
+        "use strict";
 
         $(function() {
-            $('#colorww1').slider({
+            $('#colorWWLeft').slider({
                 formatter: function(value) {
                     return value + '%';
                 }
             });
-            $('#colorww2').slider({
+            $('#colorWWRight').slider({
                 formatter: function(value) {
                     return value + '%';
                 }
             });
 
-            $('#line1').selectize({
+            $('#lineLeft').selectize({
                 create: false,
                 sortField: 'text'
             });
-            $('#line2').selectize({
+            $('#lineRight').selectize({
                 create: false,
                 sortField: 'text'
             });
-            $('#target1').selectize({
+            $('#destLeft').selectize({
                 create: false,
                 sortField: 'text'
             });
-            $('#target2').selectize({
+            $('#destRight').selectize({
                 create: false,
                 sortField: 'text'
             });
-            $('#desc1').selectize({
+            $('#descLeft').selectize({
                 create: false,
                 sortField: 'text'
             });
-            $('#desc2').selectize({
+            $('#descRight').selectize({
                 create: false,
                 sortField: 'text'
             });
-
-
-            var socket = io.connect('http://' + document.domain + ':' + location.port);
-
-            socket.on('connect', function() {
-                console.log('connection established!');
-                socket.emit('connected');
-            });
-
-            socket.on('update', function (json) {
-                console.log('got update: ' + json);
-                // TODO: update content of all controls
-            });
-
-            $('#homing').submit(function(event) {
-                id = $('#homesingleselect').val();
-                if(id.in(0,1,2,3,4,5)) {
-                    console.log('homing leave ' + id);
-                    socket.emit('home', id);
-                }
-                event.preventDefault();
-            });
-
-            $('#homeall').click(function() {
-                console.log('homing all leaves');
-                socket.emit('home', 'all');
-            });
-
-            /*
-            // handlers for the different forms in the page
-            // these send data to the server in a variety of ways
-            $('form#broadcast').submit(function(event) {
-                socket.emit('broadcast', {data: $('#broadcast_data').val()});
-                return false;
-            });
-            $('form#home').submit(function(event) {
-                socket.emit('home', {data: {leave_id: $('#leave_id').val()}});
-                return false;
-            });
-            $('form#disconnect').submit(function(event) {
-                socket.emit('disconnect');
-                return false;
-            });
-            $('form#connect').submit(function(event) {
-                connect();
-                return false;
-            });
-            */
         });
     </script>
 </body>
