--- a/templates/index.html
+++ b/templates/index.html
@@ -147,33 +147,12 @@
                     </form><!-- /.form-horizontal -->
                 </div><!-- /.col-lg-6 -->
             </div><!-- /.row -->
+            <hr />
             <div class="row">
                 <div class="col-lg-12">
-                    <form id="homing" class="form-horizontal">
-                        <fieldset>
-                            <legend>Wartung</legend>
-
-                            <div id="maintenance" class="form-group">
-                                <div class="col-md-3 col-md-offset-2">
-                                    <select id="homeSingleSelect" name="homeSingleSelect" class="form-control">
-                                        <option value="lineleft">Linie (links)</option>
-                                        <option value="lineright">Linie (rechts)</option>
-                                        <option value="destleft">Ziel (links)</option>
-                                        <option value="destright">Ziel (rechts)</option>
-                                        <option value="descleft">Beschreibung (links)</option>
-                                        <option value="descright">Beschreibung (rechts)</option>
-                                    </select><!-- #selectbasic /.form-control -->
-                                </div><!-- /.col-md-3 -->
-                                <div class="col-md-1">
-                                    <button id="homeOne" name="homeOne" type="submit" class="btn btn-default">Home</button>
-                                </div><!-- /.col-md-1 -->
-                                <div class="col-md-4 col-md-offset-2">
-                                    <button id="homeAll" name="homeAll" type="button" class="btn btn-primary">Home alle</button>
-                                    <button id="Reset" name="reset" type="button" class="btn btn-danger">Reset</button>
-                                </div><!-- /.col-md-4 -->
-                            </div><!-- /.form-group -->
-                        </fieldset>
-                    </form><!-- /.form-horizontal -->
+                    <h1>Maintenance</h1>
+                    <button id="home" type="button" class="btn btn-primary">Home</button>
+                    <button id="reset" type="button" class="btn btn-primary">Reset</button>
                 </div><!-- /.col-lg-12 -->
             </div><!-- /.row -->
         </div><!-- /.container -->
